tests/machine/x/rust/two-sum.error
line 0: compile: exit status 1
error[E0308]: mismatched types
  --> /workspace/mochi/tests/machine/x/rust/two-sum.rs:13:25
   |
13 |     let result = twoSum(vec![2, 7, 11, 15], 9);
   |                  ------ ^^^^^^^^^^^^^^^^^^ expected `i32`, found `Vec<{integer}>`
   |                  |
   |                  arguments to this function are incorrect
   |
   = note: expected type `i32`
            found struct `Vec<{integer}>`
note: function defined here
  --> /workspace/mochi/tests/machine/x/rust/two-sum.rs:2:8
   |
2  |     fn twoSum(nums: i32, target: i32) -> i32 {
   |        ^^^^^^ ---------

error[E0608]: cannot index into a value of type `i32`
  --> /workspace/mochi/tests/machine/x/rust/two-sum.rs:14:28
   |
14 |     println!("{:?}", result[0 as usize]);
   |                            ^^^^^^^^^^^^

error[E0608]: cannot index into a value of type `i32`
  --> /workspace/mochi/tests/machine/x/rust/two-sum.rs:15:28
   |
15 |     println!("{:?}", result[1 as usize]);
   |                            ^^^^^^^^^^^^

error[E0599]: no method named `len` found for type `i32` in the current scope
 --> /workspace/mochi/tests/machine/x/rust/two-sum.rs:3:22
  |
3 |         let n = nums.len();
  |                      ^^^
  |
help: there is a method `le` with a similar name, but with different arguments
 --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/core/src/cmp.rs:1400:5

error[E0608]: cannot index into a value of type `i32`
 --> /workspace/mochi/tests/machine/x/rust/two-sum.rs:6:24
  |
6 |                 if nums[i as usize] + nums[j as usize] == target {
  |                        ^^^^^^^^^^^^

error[E0608]: cannot index into a value of type `i32`
 --> /workspace/mochi/tests/machine/x/rust/two-sum.rs:6:43
  |
6 |                 if nums[i as usize] + nums[j as usize] == target {
  |                                           ^^^^^^^^^^^^

error[E0308]: mismatched types
 --> /workspace/mochi/tests/machine/x/rust/two-sum.rs:7:28
  |
2 |     fn twoSum(nums: i32, target: i32) -> i32 {
  |                                          --- expected `i32` because of return type
...
7 |                     return vec![i, j];
  |                            ^^^^^^^^^^ expected `i32`, found `Vec<{integer}>`
  |
  = note: expected type `i32`
           found struct `Vec<{integer}>`
  = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0308, E0599, E0608.
For more information about an error, try `rustc --explain E0308`.

fn main() {
